--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>ao.apbot</groupId>
-	<artifactId>build</artifactId>
+	<artifactId>bom</artifactId>
 	<packaging>jar</packaging>
 
 	<name>APBot - build and package</name>
