--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<name>APBot - A Perfect Bot</name>
 
 	<modules>
-		<module>build</module>
+		<module>bom</module>
 		<module>com-core</module>
 		<module>dao-orm</module>
 		<module>rules</module>
@@ -23,5 +23,18 @@
 		<drools.version>6.2.0.CR2</drools.version>
 		<junit.version>4.11</junit.version>
 	</properties>
-
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
