--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -1,9 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>ao.apbot</groupId>
 	<artifactId>bom</artifactId>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>APBot - build and package</name>
 
@@ -13,4 +14,26 @@
 		<version>0.0.2-SNAPSHOT</version>
 	</parent>
 
+	<dependencies>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>ao.apbot</groupId>
+			<artifactId>com-core</artifactId>
+			<version>${ao.apbot.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ao.apbot</groupId>
+			<artifactId>dao-orm</artifactId>
+			<version>${ao.apbot.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ao.apbot</groupId>
+			<artifactId>rules</artifactId>
+			<version>${ao.apbot.version}</version>
+		</dependency>
+	</dependencies>
 </project>
