--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -42,6 +42,14 @@
 				<groupId>org.wildfly.plugins</groupId>
 				<artifactId>wildfly-maven-plugin</artifactId>
 				<version>1.0.2.Final</version>
+				<executions>
+					<execution>
+						<phase>deploy</phase>
+						<goals>
+							<goal>deploy</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
 					<hostname>${wildfly-hostname}</hostname>
 					<port>${wildfly-port}</port>
