--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -83,6 +83,7 @@
 				</executions>
 				<configuration>
 					<hostname>${wildfly-hostname}</hostname>
+					<port>${wildfly-port}</port>
 					<username>${wildfly-username}</username>
 					<password>${wildfly-password}</password>
 				</configuration>
