wildfly deploy force

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -82,10 +82,11 @@
 					</execution>
 				</executions>
 				<configuration>
-					<hostname>${wildfly-hostname}</hostname>
+					<hostname>${wildfly.hostname}</hostname>
 					<port>${wildfly-port}</port>
-					<username>${wildfly-username}</username>
-					<password>${wildfly-password}</password>
+					<username>${wildfly.username}</username>
+					<password>${wildfly.password}</password>
+					<force>true</force>
 				</configuration>
 			</plugin>
 		</plugins>
