--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+				<groupId>ao.apbot</groupId>
+				<artifactId>dao-orm</artifactId>
+				<version>0.0.2-SNAPSHOT</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
