--- a/com-core/pom.xml
+++ b/com-core/pom.xml
@@ -91,6 +91,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>ao.apbot</groupId>
+			<artifactId>rules</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
