--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>ao.apbot</groupId>
@@ -20,6 +21,9 @@
 		<ao.apbot.version>0.0.2-SNAPSHOT</ao.apbot.version>
 		<mina.version>2.0.7</mina.version>
 		<guava.version>18.0</guava.version>
+		<mysql.groupId>mysql</mysql.groupId>
+		<mysql.artifactId>mysql-connector-java</mysql.artifactId>
+		<mysql.driver.version>5.1.34</mysql.driver.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -59,6 +63,13 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	<dependencies>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql.driver.version}</version>
+		</dependency>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
@@ -70,6 +81,70 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.wildfly.plugins</groupId>
+				<artifactId>wildfly-maven-plugin</artifactId>
+				<configuration>
+					<jboss-home>${wildfly-home}</jboss-home>
+
+				</configuration>
+				<executions>
+					<execution>
+						<id>deploy_jdbc_driver</id>
+						<phase>package</phase>
+						<goals>
+							<goal>deploy-artifact</goal>
+						</goals>
+						<configuration>
+							<groupId>${mysql.groupId}</groupId>
+							<artifactId>${mysql.artifactId}</artifactId>
+							<name>${mysql.artifactId}-${mysql.driver.version}.jar</name>
+						</configuration>
+					</execution>
+
+					<execution>
+						<id>add_datasource</id>
+						<phase>package</phase>
+						<goals>
+							<goal>add-resource</goal>
+						</goals>
+						<configuration>
+							<address>subsystem=datasources,data-source=myDS</address>
+							<resources>
+								<resource>
+									<properties>
+										<connection-url>${db.jdbc.url}</connection-url>
+										<jndi-name>java:/jdbc/apbot-stage</jndi-name>
+										<enabled>true</enabled>
+										<enable>true</enable>
+										<user-name>${mysql.username}</user-name>
+										<password>${mysql.password}</password>
+										<driver-name>${mysql.driver.name}</driver-name>
+										<use-ccm>false</use-ccm>
+									</properties>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>openshift</id>
+			<build>
+				<finalName>APBOT</finalName>
+				<plugins>
+					<plugin>
+						<artifactId>maven-war-plugin</artifactId>
+						<configuration>
+							<outputDirectory>deployments</outputDirectory>
+							<warName>ROOT</warName>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
