--- a/pom.xml
+++ b/pom.xml
@@ -63,13 +63,6 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	<dependencies>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>${mysql.driver.version}</version>
-		</dependency>
-	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
@@ -81,36 +74,50 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>mysql</groupId>
-									<artifactId>mysql-connector-java</artifactId>
-									<version>${mysql.driver.version}</version>
-									<type>jar</type>
-									<outputDirectory>deployments</outputDirectory>
-								</artifactItem>
-							</artifactItems>
-							<outputDirectory>${project.build.directory}/wars</outputDirectory>
-							<overWriteReleases>false</overWriteReleases>
-							<overWriteSnapshots>true</overWriteSnapshots>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
 	<profiles>
+		<profile>
+			<id>local</id>
+			<dependencies>
+				<dependency>
+					<groupId>mysql</groupId>
+					<artifactId>mysql-connector-java</artifactId>
+					<version>${mysql.driver.version}</version>
+				</dependency>
+			</dependencies>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-dependency-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>copy</id>
+								<phase>package</phase>
+								<goals>
+									<goal>copy</goal>
+								</goals>
+								<configuration>
+									<artifactItems>
+										<artifactItem>
+											<groupId>mysql</groupId>
+											<artifactId>mysql-connector-java</artifactId>
+											<version>${mysql.driver.version}</version>
+											<type>jar</type>
+											<outputDirectory>deployments</outputDirectory>
+										</artifactItem>
+									</artifactItems>
+									<outputDirectory>${project.build.directory}/wars</outputDirectory>
+									<overWriteReleases>false</overWriteReleases>
+									<overWriteSnapshots>true</overWriteSnapshots>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 		<profile>
 			<id>openshift</id>
 			<build>
@@ -123,20 +130,6 @@
 							<warName>ROOT</warName>
 						</configuration>
 					</plugin>
-					<!-- <plugin> <groupId>org.wildfly.plugins</groupId> <artifactId>wildfly-maven-plugin</artifactId> 
-						<executions> <execution> <id>deploy_jdbc_driver</id> <phase>package</phase> 
-						<goals> <goal>deploy-artifact</goal> </goals> <configuration> <groupId>${mysql.groupId}</groupId> 
-						<artifactId>${mysql.artifactId}</artifactId> <name>${mysql.artifactId}-${mysql.driver.version}.jar</name> 
-						<hostname>${OPENSHIFT_WILDFLY_IP}</hostname> <port>${OPENSHIFT_WILDFLY_MANAGEMENT_PORT}</port> 
-						<username>${OPENSHIFT_WILDFLY_USERNAME}</username> <password>${OPENSHIFT_WILDFLY_PASSWORD}</password> 
-						</configuration> </execution> <execution> <id>add_datasource</id> <phase>package</phase> 
-						<goals> <goal>add-resource</goal> </goals> <configuration> <address>subsystem=datasources,data-source=myDS</address> 
-						<resources> <resource> <properties> <connection-url>${db.jdbc.url}</connection-url> 
-						<jndi-name>java:/jdbc/apbot-stage</jndi-name> <enabled>true</enabled> <enable>true</enable> 
-						<user-name>${mysql.username}</user-name> <password>${mysql.password}</password> 
-						<driver-name>${mysql.driver.name}</driver-name> <use-ccm>false</use-ccm> 
-						</properties> </resource> </resources> </configuration> </execution> </executions> 
-						</plugin> -->
 				</plugins>
 			</build>
 		</profile>
